[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Monkey.gd" type="Script" id=1]
[ext_resource path="res://images/monkeyidle.png" type="Texture" id=2]
[ext_resource path="res://images/items.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27, 27.5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.0980392, 0.729412, 1 )

[node name="Monkey" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="LeftItem" type="Sprite" parent="."]
visible = false
position = Vector2( 19, -9 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="RightItem" type="Sprite" parent="."]
visible = false
position = Vector2( -19, -9 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -5.0
margin_top = 8.0
margin_right = 15.0
margin_bottom = 22.0
rect_rotation = 270.0
rect_scale = Vector2( 0.981634, 0.73442 )
custom_styles/fg = SubResource( 3 )
value = 100.0
percent_visible = false

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
